Add another vim profile

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ set -ag status-justify centre
 set-option -ag status-position bottom
 
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 
 set-option -ag status-bg colour235
 set-option -ag status-fg yellow
