--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ set-window-option -g window-status-style dim,fg=brightblue,bg=colour236
 set-window-option -g window-status-current-style bright,fg=brightred,bg=colour236
 
 set -g status-left-length 25
-set -g status-left "#[fg=yellow] GPU #[fg=black]-- #[fg=white] #{gpu} "
+set -g status-left "#[fg=white]GPU #[fg=black]--  #[fg=yellow]#{gpu}  #[fg=black]"
 
 set -g status-right-length 70
 set -g status-right "#[fg=blue]Session: #S #[fg=black] -- #[fg=green]#h@#[fg=brightblue]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black] --  #[fg=green]%k:%M (#(date -u | awk '{print $4}') UTC)"
