--- a/tmux.conf
+++ b/tmux.conf
@@ -31,8 +31,8 @@ set-window-option -g window-status-current-style bright,fg=brightred,bg=colour23
 set -g status-left-length 30
 set -g status-left "#[fg=white]GPU #[fg=black]--  #[fg=yellow]#{gpu}  #[fg=black]"
 
-set -g status-right-length 70
-set -g status-right "#[fg=blue]Session: #S #[fg=black] -- #[fg=green]#h@#[fg=brightblue]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black] --  #[fg=green]%k:%M (#(date -u | awk '{print $4}') UTC)"
+set -g status-right-length 45
+set -g status-right "#[fg=blue]Session: #S#[fg=black] -- #[fg=green]#h@#[fg=brightblue]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black]"
 
 unbind C-b
 set -g prefix C-a
