--- a/ssh/config
+++ b/ssh/config
@@ -1,22 +1,22 @@
-Host 1
+Host 2080Ti
     User emrys
     HostName 172.17.18.1
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-Host 107
+Host 8000_107
     User emrys
     HostName 172.18.240.107
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-Host 119
+Host 8000_119
     User emrys
     HostName 172.18.240.119
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-Host 222
+Host a6000
     User emrys
     HostName 172.17.67.222
     LocalForward 8888 127.0.0.1:8888
