--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -61,7 +61,7 @@
 
       command: 
         - touch ~/.bash_local 
-          && echo 'cd ~/Github' >> ~/.bash_local
+          && echo 'cd ~/G' >> ~/.bash_local
           && echo 'act "$env"' >> ~/.bash_local
           && echo 'cd "$wdir"' >> ~/.bash_local
     -
