--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set -g status-left-length 30
 set -g status-left "#[fg=white]GPU #[fg=black]--  #[fg=yellow]#{gpu}  #[fg=black]"
 
 set -g status-right-length 45
-set -g status-right "#[fg=blue]Session: #S#[fg=black] -- #[fg=green]#h@#[fg=brightblue]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black]"
+set -g status-right "#[fg=brightgreen] #S#[fg=black] -- #[fg=blue]#h@#[fg=brightblue]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black]"
 
 unbind C-b
 set -g prefix C-a
