--- a/ssh/config
+++ b/ssh/config
@@ -16,8 +16,28 @@ Host 8000_119
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-Host a6000
+Host a6000_81
     User emrys
     HostName 172.17.240.81
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
+
+Host a6000_231
+    User emrys
+    HostName 172.18.240.231
+    LocalForward 8888 127.0.0.1:8888
+    LocalForward 8080 127.0.0.1:8080
+
+Host a6000_195
+    User emrys
+    HostName 172.18.240.195
+    LocalForward 8888 127.0.0.1:8888
+    LocalForward 8080 127.0.0.1:8080
+
+Host a6000_100
+    User emrys
+    HostName 172.18.240.100
+    LocalForward 8888 127.0.0.1:8888
+    LocalForward 8080 127.0.0.1:8080
+
+
