--- a/tmux.conf
+++ b/tmux.conf
@@ -72,6 +72,7 @@ unbind s
 bind l choose-tree -s
 unbind '$'
 bind n command-prompt -I "#S" "rename-session '%%'"
+bind m command-prompt -I "#S" "rename-window '%%'"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
