--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -10,7 +10,7 @@ py3nvml # python nvidia gpu monitoring
 ipdb # python debugging
 jupyterlab # Jupyter
 jupyterlab-vim # Jupyter VIM
-tabview # For viewing tables in terminal
+visidata # For viewing tables in terminal
 icdiff # For comparing differences between files
 
 # black # VIM code formatter
@@ -19,3 +19,4 @@ icdiff # For comparing differences between files
 # gpustat
 # nvidia-ml-py3
 # rich # better debugging output
+# tabview # For viewing tables in terminal
