--- a/tmux.conf
+++ b/tmux.conf
@@ -49,8 +49,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-unbind p
-unbind n
 bind-key k next-window
 bind-key j previous-window
 
@@ -71,8 +69,10 @@ bind C-l select-pane -R
 unbind s
 bind l choose-tree -s
 unbind '$'
+unbind n
 bind n command-prompt -I "#S" "rename-session '%%'"
-bind m command-prompt -I "#S" "rename-window '%%'"
+unbind z
+bind z command-prompt -I "#S" "rename-window '%%'"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
