--- a/tmux.conf
+++ b/tmux.conf
@@ -71,8 +71,8 @@ bind l choose-tree -s
 unbind '$'
 unbind n
 bind n command-prompt -I "#S" "rename-session '%%'"
-unbind z
-bind z command-prompt -I "#S" "rename-window '%%'"
+unbind m
+bind m command-prompt -I "#S" "rename-window '%%'"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
