--- a/tmux.conf
+++ b/tmux.conf
@@ -73,6 +73,8 @@ unbind n
 bind n command-prompt -I "#S" "rename-session '%%'"
 unbind m
 bind m command-prompt -I "#S" "rename-window '%%'"
+unbind z
+bind z resize-pane -Z
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
