--- a/tmux.conf
+++ b/tmux.conf
@@ -75,6 +75,12 @@ unbind m
 bind m command-prompt -I "#S" "rename-window '%%'"
 unbind z
 bind z resize-pane -Z
+bind-key -n S-Left swap-window -t -1
+bind-key -n S-Right swap-window -t +1
+unbind !
+bind ! break-pane -d
+# :join-pane -t <int>, to join window <int>
+
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
