--- a/tmux.conf
+++ b/tmux.conf
@@ -20,19 +20,19 @@ set-option -ag status-position bottom
 setw -g monitor-activity on
 set -g visual-activity off
 
-set-option -ag status-bg colour240
-set-option -ag status-fg yellow
+set-option -ag status-bg colour255
+set-option -ag status-fg green 
 set-option -ag status-style dim
 
-set-window-option -g window-status-style dim,fg=brightblue,bg=colour236
+set-window-option -g window-status-style dim,fg=brightblue
 
-set-window-option -g window-status-current-style bright,fg=brightred,bg=colour236
+set-window-option -g window-status-current-style bright,fg=brightred
 
 set -g status-left-length 30
-set -g status-left "#[fg=white]GPU #[fg=black]--  #[fg=yellow]#{gpu}  #[fg=black]"
+set -g status-left "#[fg=black]GPU #[fg=black]--  #[fg=black]#{gpu}  #[fg=black]"
 
 set -g status-right-length 45
-set -g status-right "#[fg=brightgreen] #S#[fg=black] -- #[fg=blue]#h@#[fg=brightblue]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black]"
+set -g status-right "#[fg=black] #S#[fg=black] -- #[fg=black]#h@#[fg=black]#(hostname -I | cut -d'\'' '\'' -f1) #[fg=black]"
 
 unbind C-b
 set -g prefix C-a
