--- a/tmux.conf
+++ b/tmux.conf
@@ -78,7 +78,7 @@ bind z resize-pane -Z
 bind-key -n S-Left swap-window -t -1
 bind-key -n S-Right swap-window -t +1
 unbind !
-bind ! break-pane -d
+# bind ! break-pane -d
 # :join-pane -t <int>, to join window <int>
 
 
