--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,7 +1,8 @@
 neovim # VIM
 pynvim # VIM
 powerline-status # VIM
-pyls # VIM python language server (for autocompletion etc)
+python-language-server # VIM python language server
+mypy  # VIM python type checker
 pydantic # python type import
 py3nvml # python nvidia gpu monitoring
 ipdb # python debugging
@@ -10,13 +11,11 @@ visidata # For viewing tables in terminal
 icdiff # For comparing differences between files
 grip # Visualizing markdowns usage: grip <filename> port
 
-# mypy  # VIM python type checker
 # isort # VIM import sort
 # jupyterlab-vim # Jupyter VIM
 # autoimport # VIM autoimport
 # black # VIM code formatter
 # termcolor # Python color
-# readline
 # gpustat
 # nvidia-ml-py3
 # rich # better debugging output
