--- a/ssh/config
+++ b/ssh/config
@@ -16,9 +16,9 @@ Host 119
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-Host 253
+Host 158
     User emrys
-    HostName 172.17.240.253
+    HostName 172.18.240.158
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
@@ -40,4 +40,7 @@ Host 100
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-
+Host oracle
+    User ubuntu
+    HostName 158.178.245.66
+    IdentityFile ~/.ssh/ssh-key-2023-06-25.key
