--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -10,8 +10,8 @@ jupyterlab # Jupyter
 visidata # For viewing tables in terminal
 icdiff # For comparing differences between files
 grip # Visualizing markdowns usage: grip <filename> port
+isort # VIM import sort
 
-# isort # VIM import sort
 # jupyterlab-vim # Jupyter VIM
 # autoimport # VIM autoimport
 # black # VIM code formatter
