--- a/tmux.conf
+++ b/tmux.conf
@@ -67,12 +67,14 @@ bind C-k select-pane -U
 bind C-l select-pane -R
 
 unbind s
+bind s command-prompt -I "#S" "rename-session '%%'"
 bind l choose-tree -s
 unbind '$'
 unbind n
-bind n command-prompt -I "#S" "rename-session '%%'"
+bind n command-prompt -I "#S" "rename-window '%%'"
 unbind m
-bind m command-prompt -I "#S" "rename-window '%%'"
+bind m set -gF mouse "#{?mouse,off,on}"
+
 unbind z
 bind z resize-pane -Z
 bind-key -n S-Left swap-window -t -1
