--- a/ssh/config
+++ b/ssh/config
@@ -40,7 +40,7 @@ Host 100
     LocalForward 8888 127.0.0.1:8888
     LocalForward 8080 127.0.0.1:8080
 
-Host oracle
-    User ubuntu
-    HostName 158.178.245.66
-    IdentityFile ~/.ssh/oracle.key
+Host 170
+    User emrys
+    HostName 172.18.240.170
+    LocalForward 8080 127.0.0.1:8080
