--- a/ssh/config
+++ b/ssh/config
@@ -1,3 +1,4 @@
+
 Host 73
     User emrys
     HostName 172.17.240.73
@@ -28,10 +29,9 @@ Host vpn180
     HostName piphi.dev
     Port 17180
 
-Host 200
-    User emrys
-    HostName 172.31.80.200
-    LocalForward 8085 127.0.0.1:8085
+Host tej173
+    User tej
+    HostName 172.17.240.173
 
 Host vpn200
     User emrys
@@ -90,4 +90,22 @@ Host vpn187
 
 Host digitalocean
     User root
-    HostName 157.230.44.85
+    HostName piphi.dev
+
+Host sunqi170
+    User sunqi
+    HostName 172.18.240.170
+
+Host chiayu170
+    User chiayu
+    HostName 172.18.240.170
+
+Host lambda
+    HostName 192.222.53.134
+    User ubuntu
+    IdentityFile ~/.ssh/tangoflux.pem
+
+Host slurm
+    HostName 192.222.52.186
+    User sutd
+    IdentityFile ~/.ssh/tangoflux.pem
