--- a/ssh/config
+++ b/ssh/config
@@ -1,111 +1,6 @@
-
-Host 73
-    User emrys
-    HostName 172.17.240.73
-    LocalForward 8080 127.0.0.1:8080
-
-Host vpn73
-    User emrys
-    HostName piphi.dev
-    Port 1773
-
-Host 107
-    User emrys
-    HostName 172.18.240.107
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn107
-    User emrys
-    HostName piphi.dev
-    Port 17107
-
-Host 180
-    User emrys
-    HostName 172.18.240.180
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn180
-    User emrys
-    HostName piphi.dev
-    Port 17180
-
-Host tej173
-    User tej
-    HostName 172.17.240.173
-
-Host vpn200
-    User emrys
-    HostName piphi.dev
-    Port 17200
-
-Host 231
-    User emrys
-    HostName 172.18.240.231
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn231
-    User emrys
-    HostName piphi.dev
-    Port 17231
-
-Host 195
-    User emrys
-    HostName 172.18.240.195
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn195
-    User emrys
-    HostName piphi.dev
-    Port 17195
-
-Host 100
-    User emrys
-    HostName 172.18.240.100
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn100
-    User emrys
-    HostName piphi.dev
-    Port 17100
-
-Host 170
-    User emrys
-    HostName 172.18.240.170
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn170
-    User emrys
-    HostName piphi.dev
-    Port 17170
-
-Host 187
-    User emrys
-    HostName 172.18.240.187
-    LocalForward 8085 127.0.0.1:8085
-
-Host vpn187
-    User emrys
-    HostName piphi.dev
-    Port 17187
-
-Host digitalocean
+Host work_cpu
+    HostName 10.217.219.2
     User root
-    HostName piphi.dev
-
-Host sunqi170
-    User sunqi
-    HostName 172.18.240.170
-
-Host chiayu170
-    User chiayu
-    HostName 172.18.240.170
-
-Host lambda
-    HostName 192.222.53.134
-    User ubuntu
-    IdentityFile ~/.ssh/tangoflux.pem
-
-Host slurm
-    HostName 192.222.52.186
-    User sutd
-    IdentityFile ~/.ssh/tangoflux.pem
+    Port 2046
+    ServerAliveInterval 60
+    ServerAliveCountMax 3
