--- a/settings/cursor-shortcut-settings.json
+++ b/settings/cursor-shortcut-settings.json
@@ -37,7 +37,7 @@
         "when": "explorerViewletVisible && filesExplorerFocus && !inputFocus"
     },
     {
-        "key": " z m",
+        "key": ",",
         "command": "workbench.files.action.collapseExplorerFolders",
         "when": "explorerViewletVisible && filesExplorerFocus"
     },
